contact us page responsived

--- a/assets/css/ContactUs.css
+++ b/assets/css/ContactUs.css
@@ -63,8 +63,9 @@
   box-shadow: 0 15px 30px -15px rgb(0 0 0 / 30%);
 }
 header {
-  background-color: #1f6f8b;
-  height: 70vh;
+  background-color: var(--primary-color);
+  background-size: cover;
+  height: 100vh;
 }
 .property::after {
   content: "\f107";
@@ -141,333 +142,270 @@ ul {
   margin: 0px 0px 0px 10px;
   text-decoration: none;
 }
-/* editing slogan */
-.slogan > h1 {
-  font-family: var(--primary-font);
-  color: var(--secondary-color);
-  text-align: center;
+.hamburgerMenu {
+  visibility: hidden;
+  display: none;
 }
+/* slogan */
 .slogan {
   height: 100vh;
-  gap: 30px;
-flex-direction: column;
-}
-.slogan p {
-  color: var(--secondary-color);
-  width: 100%;
-  text-align: center;
+  flex-direction: column;
   font-family: var(--primary-font);
-  margin: 0 auto;
+  color: var(--secondary-color);
+  gap: 10px;
 }
 .slogan a {
+  text-decoration: none;
+  color: rgb(194, 194, 194);
+}
+/* form */
+.getInTouch {
+  font-family: var(--primary-font);
+}
+.getInTouch h2 {
+  color: var(--primary-color);
+  margin: 100px 0;
+  font-size: 50px;
+  text-transform: uppercase;
+}
+.getInTouch p {
+  width: 50%;
+}
+.Form {
+  width: 100%;
+  height: 50vh;
+}
+.Form form {
+  margin-top: 50px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.Form input {
+  border-radius: 4px;
+  border: 1px solid #878787;
+  padding: 6px 15px;
+  width: 546px;
+  height: 52px;
+  line-height: 24px;
+  outline: none;
+  font-size: 17px;
+  font-weight: 550;
+  font-family: var(--primary-font);
+}
+.Form textarea {
+  height: 134px;
+  width: 100%;
+  line-height: 21px;
+  border-radius: 4px;
+  padding: 6px 15px;
+  outline: none;
+  border: 1px solid #878787;
+  resize: none;
+  font-size: 17px;
+  font-weight: 550;
+  font-family: var(--primary-font);
+}
+.Form button {
+  width: 294px;
+  height: 54px;
+  background-image: linear-gradient(
+    250deg,
+    rgb(248, 42, 126) 0%,
+    rgb(117, 42, 144) 100%
+  );
+  border-radius: 30px;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: var(--secondary-color);
   font-family: var(--primary-font);
-  display: block;
+  border: none;
+}
+/* footer */
+.footerSlogan h3 {
+  font-size: 3em;
+  font-family: var(--primary-font);
+  color: var(--primary-color);
   text-align: center;
   text-transform: capitalize;
+  padding-top: 50px;
 }
-.hamburgerMenu,
-.hamburgerMenu > label ul {
-  visibility: hidden;
+footer {
+  background-color: #efefef;
 }
-/* Form */
-main {
-    width: 100%;
-    height: 125vh;
-    padding: 112px 0;
-    display: flex;
-    justify-content: center;
-    position: relative;
+.footerSlogan a {
+  background-image: linear-gradient(
+    250deg,
+    rgb(248, 42, 126) 0%,
+    rgb(117, 42, 144) 100%
+  );
+  padding: 16px 24px;
+  border-radius: 30px;
+  text-decoration: none;
+  color: var(--secondary-color);
+  width: 246px;
+  height: 56px;
+  line-height: 24px;
+  font-family: var(--primary-font);
+  text-transform: capitalize;
+  position: relative;
+  display: inline-block;
 }
-
-main > div > div {
-    width: 100%;
-    height: 524px;
-    display: flex;
-    flex-direction: column;
+.footerSlogan a:hover {
+  box-shadow: 0 15px 30px 0 rgb(0 0 0 / 20%);
+  top: -2px;
 }
-
-main > div > div:first-child h2 {
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 38.4px;
-    margin-bottom: 24px;
-    color: var(--primary-color);
-    padding: 0 8px;
-    text-transform: uppercase;
-    font-family: var(--primary-font);
+.footerSlogan {
+  flex-direction: column;
+  gap: 40px;
 }
-
-main > div > div:first-child p {
-    color: #878787;
-    width: 546px;
-    font-size: 14px;
-    line-height: 21px;
-    padding: 0px 8px 25px 8px;
-    font-family: var(--primary-font);
+.footerElements {
+  grid-template-columns: repeat(3, 5fr);
+  margin-top: 80px;
 }
-
-main > div > div > div:nth-child(2) {
-    display: flex;
-    width: 100%;
-    height: 356px;
-    padding-top: 15px;
+.contactElement h3 {
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  color: var(--primary-color);
+  font-family: var(--primary-font);
 }
-
-.container {
-    width: 1116px;
+.contactElement address {
+  margin-bottom: 16px;
+  font-size: 14px;
+  font-style: normal;
+  font-family: var(--primary-font);
+  color: #7f7f7f;
 }
-
-main > div > div > div:nth-child(2) form {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+.contactElement ul,
+.contactElement a {
+  list-style: none;
+  font-family: var(--primary-font);
+  color: #7f7f7f;
+  text-decoration: none;
+  border-bottom: 2px solid rgba(31, 111, 139, 0.1);
+  display: inline-block;
+  margin: 10px 0;
 }
-
-main > div > div > div:nth-child(2) input {
-    border-radius: 4px;
-    border: 1px solid #878787;
-    padding: 6px 15px;
-    width: 546px;
-    height: 52px;
-    line-height: 24px;
-    outline: none;
-    font-size: 17px;
-    font-weight: 550;
+.contactElement a:hover {
+  border-bottom: 2px solid #1f6f8b;
+  transition: all 0.3s ease;
 }
-
-main > div > div > div:nth-child(2) input:focus {
-    border: 1px solid #8fb7c5;
+.sourcesElement h3 {
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  color: var(--primary-color);
+  font-family: var(--primary-font);
 }
-
-main > div > div > div:nth-child(2) textarea:focus {
-    border: 1px solid #8fb7c5;
+.sourcesElement ul {
+  list-style: none;
+  font-family: var(--primary-font);
+  color: #7f7f7f;
+  text-decoration: none;
 }
-
-main > div > div > div:nth-child(2) textarea {
-    height: 134px;
-    width: 99%;
-    line-height: 21px;
-    border-radius: 4px;
-    padding: 6px 15px;
-    outline: none;
-    border: 1px solid #878787;
-    resize: none;
-    font-size: 17px;
-    font-weight: 550;
-    font-family: var(--primary-font);
+.sourcesElement li {
+  border-bottom: 2px solid rgba(31, 111, 139, 0.1);
+  margin: 10px 0;
 }
-
-main > div > div > div:nth-child(2), textarea, input::placeholder {
-    font-size: 16px;
+.sourcesElement li:hover {
+  border-bottom: 2px solid #1f6f8b;
+  transition: all 0.3s ease;
 }
-
-main > div > div > div:nth-child(2) button {
-    width: 294px;
-    height: 54px;
-    background-image: linear-gradient(250deg, rgb(248, 42, 126) 0%, rgb(117, 42, 144) 100%);
-    border-radius: 30px;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    right: 23%;
-    transform: translate(-50%, 0);
-    border: none;
-    font-family: var(--primary-font);
+.elements {
+gap: 30px;
 }
-
-main > div > div > div:nth-child(2) span {
-    color: var(--secondary-color);
-    font-size: 17px;
+.linkElement h3 {
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+  color: var(--primary-color);
+  font-family: var(--primary-font);
 }
-/* footer section */
-.footerSlogan h3 {
-    font-size: 3em;
-    font-family: var(--primary-font);
-    color: var(--primary-color);
-    text-align: center;
-    text-transform: capitalize;
-    padding-top: 50px;
+.linkElement ul {
+  list-style: none;
+  font-family: var(--primary-font);
+}
+.linkElement li {
+  border-bottom: 2px solid rgba(31, 111, 139, 0.1);
+  margin: 10px 0;
+}
+.linkElement li:hover {
+  border-bottom: 2px solid #1f6f8b;
+  transition: all 0.3s ease;
+}
+.linkElement a {
+  color: #7f7f7f;
+  text-decoration: none;
+}
+.elements1 {
+  flex-direction: column;
+}
+.socialLink {
+  width: 40px;
+  height: 40px;
+  border-radius: 40%;
+  background-color: #7f7f7f;
+}
+.socialLink i {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--secondary-color);
+}
+.socialLink:hover {
+  background-color: #1f6f8b;
+  position: relative;
+  bottom: 2px;
+}
+/* copyright */
+.copyright {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  color: #7f7f7f;
+  font-size: 14.8px;
+  padding-top: 40px;
+  font-family: var(--primary-font);
+}
+.copyright i {
+  color: #dc3545;
+}
+/* menu responsive  */
+@media (max-width: 425px), (max-width: 500px), (max-width: 768px) {
+  :root {
+    --primary-color: #1f6f8b;
+    --primary-font: "Noto Sans JP", sans-serif;
+    --secondary-color: #faf9f9;
   }
-  footer {
-    background-color: #efefef;
-  }
-  .footerSlogan a {
-    background-image: linear-gradient(
-      250deg,
-      rgb(248, 42, 126) 0%,
-      rgb(117, 42, 144) 100%
-    );
-    padding: 16px 24px;
-    border-radius: 30px;
-    text-decoration: none;
-    color: var(--secondary-color);
-    width: 246px;
-    height: 56px;
-    line-height: 24px;
-    font-family: var(--primary-font);
-    text-transform: capitalize;
-    position: relative;
-    display: inline-block;
-  }
-  .footerSlogan a:hover {
-    box-shadow: 0 15px 30px 0 rgb(0 0 0 / 20%);
-    top: -2px;
-  }
-  .footerSlogan {
-    flex-direction: column;
-    gap: 40px;
-  }
-  .footerElements {
-    grid-template-columns: repeat(3, 5fr);
-    margin-top: 80px;
-  }
-  .contactElement h3 {
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-    color: var(--primary-color);
-    font-family: var(--primary-font);
-  }
-  .contactElement address {
-    margin-bottom: 16px;
-    font-size: 14px;
-    font-style: normal;
-    font-family: var(--primary-font);
-    color: #7f7f7f;
-  }
-  .contactElement ul,
-  .contactElement a {
-    list-style: none;
-    font-family: var(--primary-font);
-    color: #7f7f7f;
-    text-decoration: none;
-    border-bottom: 2px solid rgba(31, 111, 139, 0.1);
-    display: inline-block;
-    margin: 10px 0;
-  }
-  .contactElement a:hover {
-    border-bottom: 2px solid #1f6f8b;
-    transition: all 0.3s ease;
-  }
-  .sourcesElement h3 {
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-    color: var(--primary-color);
-    font-family: var(--primary-font);
-  }
-  .sourcesElement ul {
-    list-style: none;
-    font-family: var(--primary-font);
-    color: #7f7f7f;
-    text-decoration: none;
-  }
-  .sourcesElement li {
-    border-bottom: 2px solid rgba(31, 111, 139, 0.1);
-    margin: 10px 0;
-  }
-  .sourcesElement li:hover {
-    border-bottom: 2px solid #1f6f8b;
-    transition: all 0.3s ease;
-  }
-  .elements{
-    justify-content: space-around;
-  }
-  .linkElement h3 {
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 15px;
-    color: var(--primary-color);
-    font-family: var(--primary-font);
-  }
-  .linkElement ul {
-    list-style: none;
-    font-family: var(--primary-font);
-  }
-  .linkElement li {
-    border-bottom: 2px solid rgba(31, 111, 139, 0.1);
-    margin: 10px 0;
-  }
-  .linkElement li:hover {
-    border-bottom: 2px solid #1f6f8b;
-    transition: all 0.3s ease;
-  }
-  .linkElement a{
-    color: #7f7f7f;
-    text-decoration: none;
-  }
-  .elements1 {
-    flex-direction: column;
-  }
-  .socialLink{
-    width: 40px;
-      height: 40px;
-      border-radius: 40%;
-      background-color: #7f7f7f;
-     
-  }
-  .socialLink i{
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--secondary-color);
-  }
-  .socialLink:hover{
-    background-color: #1f6f8b;
-    position: relative;
-    bottom: 2px;
-  }
-  /* copyright */
-  .copyright{
-    width: 100%;
-      height: 20%;
-      display: flex;
-      justify-content: center;
-      color: #7f7f7f;
-      font-size: 14.8px;
-      padding-top: 40px;
-      font-family: var(--primary-font);
-  }
-  .copyright i{
-    color: #dc3545;
-  }
-  /* menu responsive  */
- @media (max-width:425px),(max-width:500px), (max-width:768px) {
-    :root {
-        --primary-color: #1f6f8b;
-        --primary-font: "Noto Sans JP", sans-serif;
-        --secondary-color: #faf9f9;
-      }
-      
-   .menu>ul{ 
+  .menu > ul {
     visibility: hidden;
   }
-  .hamburgerMenu , .hamburgerMenu> label ul{
+  .hamburgerMenu,
+  .hamburgerMenu > label ul {
     visibility: visible;
+    display: block;
   }
   label .toggleMenu {
     position: absolute;
-    right: -100px;
+    right: 10%;
     top: -100px;
     z-index: 100;
-    width: 200px;
-    height: 190px;
+    width: 15%;
+    height: 10%;
     background: var(--secondary-color);
-    /* border-radius: 50% 50% 50% 50%; */
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
     box-shadow: 0 0 0 0 var(--secondary-color), 0 0 0 0 var(--secondary-color);
     cursor: pointer;
-    
   }
-  
+
   label .hamburger {
     position: absolute;
     top: 135px;
@@ -478,13 +416,14 @@ main > div > div > div:nth-child(2) span {
     display: block;
     -webkit-transform-origin: center;
     transform-origin: center;
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
   }
-  
-  label .hamburger:after, label .hamburger:before {
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+
+  label .hamburger:after,
+  label .hamburger:before {
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
     content: "";
     position: absolute;
     display: block;
@@ -492,41 +431,46 @@ main > div > div > div:nth-child(2) span {
     height: 100%;
     background: black;
   }
-  
-  label .hamburger:before { top: -10px; }
-  
-  label .hamburger:after { bottom: -10px; }
-  
-  label input { display: none; }
-  
-  label input:checked + .toggleMenu {
-    box-shadow: 0 0 0 100vw var(--secondary-color), 0 0 0 100vh var(--secondary-color);
-    border-radius: 0;
-    
+
+  label .hamburger:before {
+    top: -10px;
   }
-  
+
+  label .hamburger:after {
+    bottom: -10px;
+  }
+
+  label input {
+    display: none;
+  }
+
+  label input:checked + .toggleMenu {
+    box-shadow: 0 0 0 10px var(--secondary-color),
+      0 0 0 100vh var(--secondary-color);
+    border-radius: 0;
+  }
+
   label input:checked + .toggleMenu .hamburger {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
-    
   }
-  
+
   label input:checked + .toggleMenu .hamburger:after {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
     bottom: 0;
-    
   }
-  
+
   label input:checked + .toggleMenu .hamburger:before {
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
     top: 0;
-    
   }
-  
-  label input:checked + .toggleMenu + ul { opacity: 1; }
-  
+
+  label input:checked + .toggleMenu + ul {
+    opacity: 1;
+  }
+
   label ul {
     z-index: 200;
     position: absolute;
@@ -535,11 +479,11 @@ main > div > div > div:nth-child(2) span {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     opacity: 0;
-    -webkit-transition: .25s 0s ease-in-out;
-    transition: .25s 0s ease-in-out;
+    -webkit-transition: 0.25s 0s ease-in-out;
+    transition: 0.25s 0s ease-in-out;
     list-style: none;
   }
-  
+
   label a {
     margin-bottom: 1em;
     display: block;
@@ -547,15 +491,24 @@ main > div > div > div:nth-child(2) span {
     text-decoration: none;
     font-family: var(--primary-font);
   }
-  
-  h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 80%;
-    text-align: center;
+  .footerSlogan a {
+    width: auto;
+    line-height: 0;
   }
-
+  .footerElements {
+    flex-direction: column;
+    margin-left: 20px;
   }
+  .getInTouch p{
+    margin: 0 auto;
+  }
+  .Form input{
+    width: 100%;
+  }
+  .Form form{
+    gap: 5px;
+  }
+  .Form{
+    height: 70vh;
+  }
+}
